# JSVMNode

./: JSVMNode.sln  README.md
JSVMNode/: CMakeLists.txt  JSVMNode.vcxproj  JSVMNode.vcxproj.filters  framework.h  jsvm_vm_impl.cpp  node_snapshot_stub.cc  pch.h
JSVMNode/include/: CallWrap.h  TypeWrap.h  jsvm_interface.h
JSVMTest/: ConsoleLogPrinter.cpp  ConsoleLogPrinter.h  JSVMTest.cpp  JSVMTest.vcxproj  JSVMTest.vcxproj.filters  stdafx.h
TSPrj/: package.json  tsconfig.json
TSPrj/src/: class.ts  main.ts
